--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -1,51 +1,42 @@
 .about {
-  /* padding-top: 10rem; */
   padding-bottom: 20rem;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  text-align: left;
   gap: 10rem;
-  /* background-color: var(--clr-stone-light); */
-  /* border-radius: 1rem; */
+}
+
+.about__card {
+  /* width: fit-content; */
+  /* width: 100%; */
+  height: fit-content;
+  /* gap: 6rem; */
+  background-color: var(--clr-stone-light);
+  border-radius: 1rem;
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  flex-wrap: wrap;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 25px 50px -20px;
 }
 
 .about__img {
   border-radius: 1rem;
-  width: 100%;
-  /* box-shadow: rgba(0, 0, 0, 0.5) 0px 25px 20px -20px; */
+  width: 700px;
+  /* height: auto; */
 }
 
-.about__holder {
-  background-color: var(--clr-stone-light);
-  border-radius: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.about__card {
+.about__info {
   padding-left: 2rem;
   padding-right: 2rem;
-  padding-top: 2rem;
-  padding-bottom: 3rem;
-  /* display: flex; */
-  flex-direction: column;
-  justify-content: center;
-  gap: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 25px 20px -20px;
-}
-
-.card__text {
-  /* max-width: 80%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 400px;
+  height: 300px;
 }
 
-.card__text1 {
-  /* max-width: 80%; */
+.about__text1 {
   padding-top: 0.5rem;
   font-size: var(--size-2xl);
   color: var(--clr-red600);
@@ -54,27 +45,17 @@
   text-transform: uppercase;
 }
 
-.card__text2 {
+.about__text2 {
   padding-top: 1rem;
   font-size: var(--size-xl);
   color: var(--clr-stone-dark);
   font-weight: 400;
 }
 
-.about__title {
-  align-self: flex-start;
-}
-
-.about__text1 {
+.section__title {
   color: var(--clr-stone400);
   font-size: var(--size-7xl);
   font-weight: 1000;
-  /* text-transform: uppercase; */
-  /* line-height: 0.75; */
-}
-
-.about__text2 {
-  color: var(--clr-stone600);
-  font-size: var(--size-base);
-  font-weight: 400;
+  text-align: left;
+  padding-bottom: 1rem;
 }
