--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,7 @@ html {
 
 body {
   /* font-family: "Maven Pro", sans-serif; */
-  background-color: white;
+  background-color: white
   color: var(--clr-stone-dark);
 }
 
